--- a/index.css
+++ b/index.css
@@ -66,32 +66,18 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
 }
 
 .attacker {
+	margin: 0x 0x 0x 10px;
 	position: relative;
-	margin-bottom: 5px;
 	height: 40px;
 	border: 2px solid transparent;
 	background-color: #DFDFDF;
+	cursor: pointer;
 }
 
 .list {
 	margin-top: 0;
 	padding-left: 0;
 	list-style: none;
-}
-
-.item {
-	margin: 0;
-	line-height: 40px;
-	height: 40px;
-	width: 100%;
-	background-color: #DFDFDF;
-	font-size: 18px;
-	text-align: center;
-	color: #353535;
-}
-
-.item:hover {
-	cursor: pointer;
 }
 
 .drag-over {
@@ -136,8 +122,6 @@ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer
 
 .attacker:hover .hidden { display: block; }
 
-.attacker { cursor: pointer; }
-
 .attacker > h4 {
 	margin-left: 10px;
 }
@@ -159,4 +143,11 @@ select.fixed-width-select {
 .save-modifier {
 	max-width: 100px;
 	text-align: center;
+}
+
+.unselectable {
+	-moz-user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
